--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -3,3 +3,10 @@
 /Data_ch04/
 /data_ch05/
 /data_ch06/
+/data_ch01/
+/data_ch02/
+/data_ch03/
+/data_ch04/
+/data_ch08/
+/data_mission/
+/java_ch08/
